# cons

./: .gitignore  LICENSE  Makefile  README.md  configure  configure.ac
bootstrap/: Makefile  codegen.scm  compile.scm  config.scm.in  env.scm  lex.scm  macroexpand.scm  main.scm  prelude.scm  secdump.c  syntax.scm  typecheck.scm  types.scm
bootstrap/inc/: decls.h  macro.scm  typedefs.scm
lib/: Makefile  core.cons  iter.cons  json.cons  lex.cons  math.cons  sys.cons
lib/core/: config.cons.in  core.cons  io.cons  macro.cons  memory.cons  runtime.cons  string.cons
lib/math/: config.cons.in
mk/: config.mk.in  install.mk  test.mk
runtime/: Makefile
runtime/amd64/: Makefile  call_cc.s  dso.s  init.s  values.s
runtime/amd64/entry/: linux.s
test/: Makefile  bitlogic.cons  bitshift.cons  bool.cons  call.cons  call_cc.cons  call_cc2.cons  closure.cons  closure_set.cons  cond.cons  const_list.cons  dyn_array.cons  dyn_list.cons  ellipsis.cons  expr.cons  expr2.cons  extern.cons  int_cmp.cons  lambda.cons  let.cons  local_templates.cons  mov.cons  nested.cons  nested1.cons  nested2.cons  pointer.cons  real.cons  real_cmp.cons  rec.cons  set.cons  set_field.cons  struct.cons  tail.cons  tail2.cons  tail3.cons  values.cons
test/inc/: call_cc.cons  io.cons  list.cons  memory.cons  values.cons
test2/: Makefile  cat.cons  cat_test.sh  db.cons  db_test.sh  echo.cons  echo_test.sh  head.cons  head_test.sh  iter.cons  iter_test.sh  json-test.json  json.cons  json_test.sh  mkdir.cons  mkdir_test.sh  sort.cons  sort_test.sh  xargs.cons  xargs_test.sh  yes.cons  yes_test.sh
vim/: Makefile.in  mksyntax.sh
vim/ftdetect/: cons.vim
vim/syntax/: cons.vim.in
